
package proto;

option java_package = "com.lvl6.aoc2.noneventprotos";
option java_outer_classname = "UserSpell";

message UserSpellProto {
	optional int32 userID = 1;
	optional int32 spellID = 2;
	optional int32 level = 3;
}